// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`graded-group should snapshot: initial render (mobile: false) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-block"
        >
          <div
            class="perseus-graded-group"
          >
            <div
              style="font-size: var(--wb-font-heading-size-small); color: var(--wb-semanticColor-core-foreground-neutral-default); text-transform: uppercase; margin-block-end: 11px; letter-spacing: 0.8px;"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-block"
                      >
                        <div
                          class="categorizer-container "
                        >
                          <table
                            class="categorizer-table"
                            data-style-media-screen-and-max-width-767px="min-inline-size: auto;"
                          >
                            <thead>
                              <tr>
                                <td
                                  style="background-color: inherit; border-block-end: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-border-neutral-subtle);"
                                />
                                <th
                                  style="text-align: center; vertical-align: bottom;"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  style="text-align: center; vertical-align: bottom;"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <span
                                      data-style-hover="color: var(--wb-semanticColor-core-foreground-instructive-subtle);"
                                      style="font-size: var(--wb-sizing-size_280); padding-inline-end: 3px; cursor: pointer;"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        height="1em"
                                        role="img"
                                        style="vertical-align: middle;"
                                        viewBox="0 0 100 99.944"
                                        width="1.0005603137757144em"
                                      >
                                        <path
                                          d="M50.046 8.322q-8.493 0-16.188 3.306-15.561 6.669-22.173 22.23-3.363 7.695-3.363 16.188t3.306 16.188 8.949 13.281q5.586 5.586 13.281 8.892t16.188 3.306 16.188-3.306 13.281-8.892 8.892-13.281 3.306-16.188-3.306-16.188-8.892-13.281-13.281-8.949q-7.695-3.306-16.188-3.306zm0 91.713q-13.623 0-25.137-6.726t-18.183-18.183q-6.726-11.571-6.726-25.137t6.726-25.08 18.24-18.24 25.08-6.669q13.566 0 25.08 6.726 11.514 6.669 18.24 18.183t6.726 25.137-6.726 25.137-18.24 18.126q-11.514 6.726-25.08 6.726z"
                                          fill="currentColor"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <div
              aria-live="polite"
              role="status"
            >
              <div
                class="perseus-renderer perseus-renderer-responsive"
              >
                <div
                  class="paragraph perseus-paragraph-centered"
                  data-perseus-paragraph-index="0"
                >
                  

                </div>
              </div>
            </div>
            <button
              aria-disabled="false"
              data-kind="secondary"
              data-style-active="background: var(--wb-semanticColor-action-secondary-progressive-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-secondary-progressive-press-foreground); border-color: var(--wb-semanticColor-action-secondary-progressive-press-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-progressive-press-border);"
              data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
              data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-focus-visible-active="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-progressive-press-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-focus-visible-hover="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-progressive-hover-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-secondary-progressive-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-secondary-progressive-hover-foreground); border-color: var(--wb-semanticColor-action-secondary-progressive-hover-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-progressive-hover-border);"
              data-style-moz-focus-inner="border: 0px;"
              style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-medium); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-secondary-medium); border-style: solid; border-width: var(--wb-c-button-root-border-width-secondary-default); border-color: var(--wb-semanticColor-action-secondary-progressive-default-border); background: var(--wb-semanticColor-action-secondary-progressive-default-background); color: var(--wb-semanticColor-action-secondary-progressive-default-foreground); transition: border-radius 0.1s ease-in-out;"
              type="button"
            >
              <span
                style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-default); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
              >
                Check
              </span>
            </button>
            <button
              style="background-color: unset; font-size: var(--wb-font-body-size-small); padding: 0px; border: none; margin-block-start: 20px; color: var(--wb-semanticColor-core-foreground-instructive-default); cursor: pointer; display: block; clear: both;"
              tabindex="0"
            >
              Explain
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`graded-group should snapshot: initial render (mobile: true) 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="0"
    >
      <hr
        aria-hidden="true"
      />
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <h2>
        Check your understanding!
      </h2>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-block"
        >
          <div
            class="perseus-graded-group"
            style="border-block-start: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); border-block-end: var(--wb-border-width-thin) solid var(--wb-semanticColor-core-border-neutral-subtle); background-color: var(--wb-semanticColor-core-background-base-subtle); margin-inline-start: -16px; margin-inline-end: -16px; padding-block-end: 16px; padding-inline-start: 16px; padding-inline-end: 16px; padding-block-start: 10px; width: auto;"
          >
            <div
              style="font-size: var(--wb-font-heading-size-small); color: var(--wb-semanticColor-core-foreground-neutral-default); text-transform: uppercase; margin-block-end: 11px; letter-spacing: 0.8px;"
            >
              Metabolic strategies of bacteria
            </div>
            <div
              class="perseus-renderer perseus-renderer-responsive"
            >
              <div
                class="paragraph"
                data-perseus-paragraph-index="0"
              >
                <ol
                  start="1"
                >
                  <li>
                    <div
                      class="paragraph"
                    >
                      <strong>
                        Which of the following statements about metabolic strategies of bacteria are true?
                      </strong>
                    </div>
                    <div
                      class="paragraph"
                    >
                      <div
                        class="perseus-widget-container widget-block"
                      >
                        <div
                          class="categorizer-container"
                          data-style-media-screen-and-max-width-1023px="margin-inline-start: -16px; margin-inline-end: -16px; overflow-x: auto;"
                        >
                          <table
                            class="categorizer-table"
                            data-style-media-screen-and-max-width-767px="min-inline-size: auto;"
                          >
                            <thead>
                              <tr>
                                <td
                                  style="background-color: inherit; border-block-end: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-border-neutral-subtle);"
                                />
                                <th
                                  style="text-align: center; vertical-align: bottom;"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        True
                                      </div>
                                    </div>
                                  </div>
                                </th>
                                <th
                                  style="text-align: center; vertical-align: bottom;"
                                >
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        False
                                      </div>
                                    </div>
                                  </div>
                                </th>
                              </tr>
                            </thead>
                            <tbody>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria conduct photosynthesis and produce oxygen, much like plants.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_0"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_0"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Bacteria are always autotrophic but they may get energy from either light or chemical sources.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_1"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_1"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some chemosynthetic bacteria introduce energy and fixed carbon into communities where photosynthesis is not possible (e.g., deep-sea vents).
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_2"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_2"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                              <tr>
                                <td>
                                  <div
                                    class="perseus-renderer perseus-renderer-responsive"
                                  >
                                    <div
                                      class="paragraph"
                                      data-perseus-paragraph-index="0"
                                    >
                                      <div
                                        class="paragraph"
                                      >
                                        Some bacteria live symbiotically inside of host organisms and provide the host with nutrients.
                                      </div>
                                    </div>
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="True"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_3"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                                <td
                                  class="category"
                                  style="text-align: center; padding: 0px; color: var(--wb-semanticColor-core-border-neutral-subtle); vertical-align: middle;"
                                >
                                  <div
                                    aria-label="False"
                                    role="button"
                                  >
                                    <input
                                      data-style-checked="background-color: var(--wb-semanticColor-core-foreground-instructive-default); border: none; border-radius: 50%; box-shadow: inset 0px 0px 0px 2px var(--wb-semanticColor-core-background-base-default), 0 0px 0px 2px var(--wb-semanticColor-core-foreground-instructive-default); margin-block-start: 2px; margin-block-end: 2px; margin-inline-start: 2px; margin-inline-end: 2px; height: 20px; width: 20px;"
                                      data-style-ms-check="display: none;"
                                      name="perseus_radio_9_3"
                                      style="display: inline-block; -webkit-appearance: none; appearance: none; background-color: var(--wb-semanticColor-core-background-base-default); border: var(--wb-border-width-medium) solid var(--wb-semanticColor-core-background-base-default); box-shadow: 0 0px 0px var(--wb-border-width-medium) var(--wb-semanticColor-core-border-neutral-subtle); outline: none; box-sizing: border-box; flex-shrink: 0; margin-block-end: 1px; margin-inline-start: 1px; margin-inline-end: 1px; margin-block-start: 1px; height: 22px; width: 22px; border-radius: 50%;"
                                      type="radio"
                                    />
                                  </div>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
            <button
              style="background-color: unset; font-size: var(--wb-font-body-size-small); padding: 0px; border: none; margin-block-start: 20px; color: var(--wb-semanticColor-core-foreground-instructive-default); cursor: pointer; display: block; clear: both;"
              tabindex="0"
            >
              Explain
            </button>
            <div
              style="display: flex; align-items: center; height: 68px; margin: 16px -16px -16px -16px; padding-left: 16px; padding-right: 10px; justify-content: space-between;"
            >
              <span />
              <button
                aria-disabled="true"
                data-kind="primary"
                data-style-active="background: var(--wb-semanticColor-action-primary-disabled-background); border-radius: var(--wb-c-button-root-border-radius-default); color: var(--wb-semanticColor-action-primary-disabled-foreground); outline: none; outline-offset: var(--wb-c-button-root-border-offset-primary); border-color: var(--wb-semanticColor-action-primary-disabled-border); border-width: var(--wb-c-button-root-border-width-primary-default); box-shadow: none; text-decoration: none; text-decoration-thickness: unset; text-underline-offset: unset;"
                data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
                data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium); border-color: var(--wb-semanticColor-action-primary-disabled-border); border-width: var(--wb-c-button-root-border-width-primary-default); border-radius: var(--wb-c-button-root-border-radius-default); background: var(--wb-semanticColor-action-primary-disabled-background); color: var(--wb-semanticColor-action-primary-disabled-foreground);"
                data-style-hover="border-color: var(--wb-semanticColor-action-primary-disabled-border); border-width: var(--wb-c-button-root-border-width-primary-default); border-radius: var(--wb-c-button-root-border-radius-default); background: var(--wb-semanticColor-action-primary-disabled-background); color: var(--wb-semanticColor-action-primary-disabled-foreground); outline: none; box-shadow: none; text-decoration: none; text-decoration-thickness: unset; text-underline-offset: unset;"
                data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-primary-progressive-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-primary-progressive-hover-foreground); outline: var(--wb-c-button-root-border-width-primary-hover) solid var(--wb-semanticColor-action-primary-progressive-hover-border); outline-offset: var(--wb-c-button-root-border-offset-primary);"
                data-style-moz-focus-inner="border: 0px;"
                style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: not-allowed; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-medium); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-primary-medium); border-style: solid; border-width: var(--wb-c-button-root-border-width-primary-default); border-color: var(--wb-semanticColor-action-primary-disabled-border); background: var(--wb-semanticColor-action-primary-disabled-background); color: var(--wb-semanticColor-action-primary-disabled-foreground); transition: border-radius 0.1s ease-in-out;"
                type="button"
              >
                <span
                  style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-medium); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-default); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
                >
                  Check
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
